--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,9 @@ repos:
       - id: mixed-line-ending
       - id: fix-byte-order-marker
       - id: detect-private-key
+      - id: name-tests-test
+        args:
+          - "--pytest"
       - id: check-toml
       - id: check-yaml
         args:
