--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build release distributions
         run: |
           # NOTE: put your own distribution build steps here.
-          apt-get install -y python3-poetry
+          python -m pip install poetry
           poetry build
 
       - name: Upload distributions
